@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'Website news with front page teasers and article handling inside.',
 	'category' => 'plugin',
 	'shy' => 0,
-	'version' => '3.2.0',
+	'version' => '3.2.1',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
