@@ -1,3 +1,10 @@
+2012-04-18  Rupert Germann <rupi@gmx.li>
+	* release of tt_news 3.2.1 in TER
+	* fixed bug 18507: using "cacheTable" is deprecated and broken in core master
+
+2012-03-15  Rupert Germann <rupi@gmx.li>
+	* release of tt_news 3.2 in TER
+	
 2012-02-17 Oliver Hader <oliver.hader@typo3.org>
 	* !!! Fixed bug #12626: No workspace preview for translated news (order changed to version overlay, localization overlay)
 
@@ -2874,5 +2881,5 @@
 
 -----------------------------------------------------------------------------------
 * svn ID:
-$Id: ChangeLog 58099 2012-02-17 16:53:40Z ohader $
+$Id: ChangeLog 59247 2012-03-15 11:25:26Z rupi $
 
